--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -1,7 +1,12 @@
 .wapper {
-  background-color: #f6f6f6;
+  display: grid;
+  background-color: gray;
   .container {
-    .article_main {
+    padding-top: 24px;
+    padding-bottom: 40px;
+    // grid-template-rows: minmax(270px,auto) 1fr;
+    .items_main {
+
 
     }
   }
