--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -1,12 +1,12 @@
 .wapper
   .container
-    .article_main
+    .items_main
       .article_header
         .article-header_info
           .article-header_author
             投稿者の名前
-            %a
-            = img_tag "", size: "", alt: "アイコン"
+            / %a
+            / = img_tag "", size: "", alt: "アイコン"
           .article-header_time
             投稿時間
           .article-header_meta
