--- a/app/assets/stylesheets/_articles.scss
+++ b/app/assets/stylesheets/_articles.scss
@@ -1,3 +1,4 @@
+// 一番下にクリック一覧のcss完成系あります
 .header{
   background-color: #55c500;
   height: 56px;
@@ -8,107 +9,150 @@
     // padding-right: 16px;
     // padding-left: 50px;
     .short-header-container{
-      background-color: red;
       height: 56px;
-      // display: flex;
-      // align-items: center;
-      // justify-content: space-between;
       max-width: 1100px;
       margin-left: auto;
       margin-right: auto;
+      // display: flex;
+      // align-items: center;
+      // justify-content: space-between;
         .short-header-container_left{
-          background-color: pink;
+          height: 100%;
           float: left;
           display: flex;
           align-items: center;
           justify-content: center;
-          height: 100%;
           position: relative;
             .title{
               display: flex;
               align-items: center;
-              &__name{
+              .title_name{
                 font-size: 30px;
+                cursor: pointer;
                 // width: 74px;
                 // height: 25px;
                 // fill: #fff;
-                font-family: -apple-system,Segoe UI,Helvetica Neue,Hiragino Kaku Gothic ProN,"メイリオ",meiryo,sans-serif;
+                // font-family: -apple-system,Segoe UI,Helvetica Neue,Hiragino Kaku Gothic ProN,"メイリオ",meiryo,sans-serif;
+                // // フォントファミリー
               }
-              &__box{
+              .title_box{
+                .title_box_list{
+       // !!!!!!!!一番下にコメントアウトで一覧のcss完成系あります!!!!!!!!!!!
+                }
               }
             }
             .home{
               height: 100%;
+              color: #fff;
               // padding: 0 20px 0 16px;
               // padding-right: 20px;
               // padding-left: 16px;
-              background-color: blue;
-              color: #fff;
+              // background-color: blue;
                 .home_content{
-                  font-size: 12px;
                   display: flex;
                   align-items: center;
                   margin:4px 0 0 24px;
                   padding: 16px 0;
+                  font-size: 12px;
                 }
               // &__name{
               //   font-size: 14px;
               // }
             }
             .community{
-              padding-right: 16px;
-              padding-left: 16px;
+              height: 100%;
+              padding: 0 16px;
               display: flex;
               align-items: center;
-                .community_name{
-                  font-size: 12px;
+              margin:4px 0 0 24px;
+              font-size: 12px;
+            //     .community_name{
+            //     }
+            //     .community_button{
+            //     }
+            }
+            .search{
+                .search_input{
+                  .messageform{
+                  }
                 }
-                .community_button{
-                  font-size: 12px;
-                }
-
             }
         }
         .short-header-container_right{
-          background-color: pink;
           float: right;
           display: flex;
           align-items: center;
           justify-content: center;
           height: 100%;
-
           // position: relative;
             .stock{
-              padding: 16px 0 16px 0;
-
+              // background: black;
+              margin-right: 16px;
+              padding: 0 16px ;
+                .stock_name{
+                   font-size: 12px;
+                }
             }
+            .postbutton{
+              background: #3f9200;
+              margin-right: 16px;
+              height: 32px;
+              padding: 0 16px ;
+              border-radius: 4px;
+              display: flex;
+              align-items: center;
+                .postbutton_name{
+                  font-size: 12px;
+                  // text-align: center;
+                }
+            }
+            // .notification
+            .login-user{
+              margin-right: 16px;
+              padding: 0 16px ;
+              cursor: pointer;
+                .login-user_mark{
+                }
+             }
         }
     }
   }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+// ----------------------------------------クリックして一覧のCSS(js導入後？)---------------------------------------------------------------------
+                // .title_box_list{
+                //   font-size: 12px;
+                //   display: block;
+                //   position: absolute;
+                //   top: 52px;
+                //   z-index: 20;
+                //   width: 200px;
+                //   background-color: white;
+                //   padding: 4px 0;
+                //   border: 1px solid #ddd;
+                //   border-radius: 3px;
+                //   // box-shadow: 0 0 8px 0 rgba(0,0,0,.15);
+                //   // ここの記述は全部コピペ
+                //     .list-1{
+                //       display: block;
+                //       // font-size: 12px;
+                //       font-weight: 400;
+                //       padding: 12px 16px;
+                //       color: #555;
+                //        border-bottom: 1px solid #ddd;
+                //     }
+                //     .list-2{
+                //       .team_now{
+                //             color: #aaa;
+                //             font-size: .8px;
+                //             font-weight: 600;
+                //             line-height: normal;
+                //             margin: 8px 0 0 16px;
+                //       }
+                //       .team_login{
+                //         display: flex;
+                //         align-items: center;
+                //         padding: 12px 16px;
+                //       }
+                //     }
+                //   }
+// ----------------------------------------クリックして一覧のCSSここまで-----------------------------------------------------------------------
