--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -1,12 +1,23 @@
+/ 各単語(Qiita,ホーム、コミュニティetc)の場所にリンクを記述すれば飛べるはず
+/ クリックしたら一覧表示する記述が（ ）の場所予定。書くべきhamlは下にほぼ完成形あります。jsなしで行けそうだけど検索してもわからず。
+/ 記述haml内にもコメントアウトあります
 .header
   .short-header
     .short-header-container
       .short-header-container_left
         .title
-          .title__name
+          .title_name
             QIITA
-          .title__box
-            aaaa
+          .title_box
+            ( )
+            / .title_box_list
+            /   .list-1
+            /     Qiita
+            /   .list-2
+            /     .team_now
+            /       ログイン中のチームがありません
+            /     .team_login
+            /       Qitia:Teamにログイン
         .home
           .home_content
             .home_name
@@ -21,20 +32,35 @@
         .search
           .search_megane
           .search_input
+            = text_field :content, class: "messageform", placeholder: 'キーワード入力'
+            / placeholderの記述が反映されない
       .short-header-container_right
         .stock
           .stock_mark
           .stock_name
+            ストック一覧
         .postbutton
           .postbutton_pen
           .postbutton_name
+            投稿する
         .notification
           .notification_word
         .login-user
           .login-user_mark
+            = image_tag "https://secure.gravatar.com/avatar/dc11c47be9e836689c39a5b6b9c58710", size: "32x32"
           .login-user_button
+
+/ -------------クリックして一覧のhaml(js導入後？)--------------
+/ .title_box_list
+/   .list-1
+/     Qiita
+/   .list-2
+/     .team_now
+/       ログイン中のチームがありません
+/     .team_login
+/       Qitia:Teamにログイン
+/ -------------クリックして一覧のhaml(js導入後？)--------------
+
 / .body
 / やなぎわらさん担当view
 / .footer
-
-
