--- a/app/assets/stylesheets/_articles.scss
+++ b/app/assets/stylesheets/_articles.scss
@@ -156,3 +156,97 @@
                 //     }
                 //   }
 // ----------------------------------------クリックして一覧のCSSここまで-----------------------------------------------------------------------
+
+
+
+
+
+// ----------------------------------------記事投稿画面のCSSここから---------------------------------------------------------------------
+
+
+
+.article-new-title input[type="text"] {
+        width: 100%;
+        height: 44px;
+        margin: 5px;
+        margin-bottom: 0;
+    }
+
+.article-new-body {
+        overflow: hidden;
+}
+
+.article-new-body_text {
+        float: left;
+        height: 100%;
+        min-height: 512px;
+        // width : -webkit-calc(100% - 643px) ;
+        width : calc(100% - 633px);
+}
+
+.article-new-body .body_header {
+        width: 100%;
+}
+
+.article-new-body .body_body {
+        padding: 5px;
+        min-height: 512px;
+}
+
+.article-new-body .body_body textarea {
+        min-height: 512px;
+        height: 100vh;
+        width: 100%;
+        border-color: #ddd;
+    }
+
+.article-new-body_guide{
+        // overflow: hidden;
+        float: right;
+        width: 633px;
+}
+
+.article-new-body_guide img.guide{
+        margin-top: 41px;
+        width: 633px;
+}
+
+.save-btn {
+        height: 31px;
+        background-color: #eee;
+        padding: 4px 10px;
+}
+
+.save-btn .post_btn {
+        height: 31px;
+        width: 156.55px;
+        float: right;
+        color: #fff;
+        background-color: #59bb0c;
+        border-color: #4ea30a;
+        border-radius: 3px;
+}
+
+// ----------------------------------------記事投稿画面のCSSここまで---------------------------------------------------------------------
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
