--- a/app/assets/stylesheets/_articles.scss
+++ b/app/assets/stylesheets/_articles.scss
@@ -74,6 +74,13 @@
             .search{
                 .search_input{
                   .messageform{
+                    height: 32px;
+                    width: 200px;
+                    text-align: center;
+                    font-size: 12px;
+                    border: none;
+                    border-radius: 4px;
+                    box-shadow: inset 0 1px 2px #ccc;
                   }
                 }
             }
