--- a/app/assets/stylesheets/_articles.scss
+++ b/app/assets/stylesheets/_articles.scss
@@ -174,9 +174,20 @@
 
 .article-new-title input[type="text"] {
         width: 100%;
-        height: 44px;
+        height: 40px;
         margin: 5px;
         margin-bottom: 0;
+        border-radius: 3px;
+        border: 1px solid #ddd;
+    }
+
+.article-new-tag input[type="text"] {
+        width: 100%;
+        height: 28px;
+        margin: 5px;
+        margin-bottom: 0;
+        border-radius: 3px;
+        border: 1px solid #ddd;
     }
 
 .article-new-body {
@@ -205,6 +216,7 @@
         height: 100vh;
         width: 100%;
         border-color: #ddd;
+        border-radius: 3px;
     }
 
 .article-new-body_guide{
