--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -1,6 +1,9 @@
 
 %h1.title
   =@article.title
+- @article.tag_list.each do |tag|
+  %span.label.label-primary= tag
+
 %p
   =qiita_markdown(@article.body)
 
