creating-log-in-page

--- a/app/views/articles/new.html.haml
+++ b/app/views/articles/new.html.haml
@@ -17,3 +17,5 @@
 
     .save-btn
       = f.submit "Qiitaに投稿", class: 'post_btn'
+
+      = link_to 'Logout', destroy_user_session_path, method: :delete
