--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,21 +1,34 @@
-%h2 Sign up
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = devise_error_messages!
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true, autocomplete: "email"
-  .field
-    = f.label :password
-    - if @minimum_password_length
-      %em
-        (#{@minimum_password_length} characters minimum)
-    %br/
-    = f.password_field :password, autocomplete: "off"
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "off"
-  .actions
-    = f.submit "Sign up"
-= render "devise/shared/links"
+
+.container
+  = image_tag "logo.png", class:"logo"
+  .main-content
+    %h2.title-register Qiitaへようこそ
+    %h3.welcome-message 新規登録(無料)して利用を開始しましょう。
+    %hr.line
+    .left-content
+      .sns_btn
+        = image_tag "github.png", class:"sns"
+        = image_tag "twitter.png", class:"sns"
+        = image_tag "google.png", class:"sns"
+        .sns-message
+          Qiitaが許可なくTwitterに投稿することはありません。
+
+        .sign-up
+          Qiita のアカウントを持っていない場合は
+          = link_to "新規登録", new_registration_path(resource_name), class:"register"
+          から。
+    .right-content
+      = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+        .field
+          = f.text_field :name, autofocus: true, autocomplete: "email", placeholder: "ユーザ名"
+        .field
+          = f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "メールアドレス"
+        .field
+          = f.password_field :password, autocomplete: "off", placeholder: "パスワード"
+        .register-message
+          %a{ href: 'https://qiita.com/terms', class: 'terms' }
+            利用規約
+          に同意のうえ、「利用規約に同意して登録」ボタンを押してください。
+        .actions
+          = f.submit "利用規約に同意して登録", class: 'login_btn'
+
