パスワードリセット画面実装

--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -1,10 +1,10 @@
-%h2 Forgot your password?
-= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
-  = devise_error_messages!
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true, autocomplete: "email"
-  .actions
-    = f.submit "Send me reset password instructions"
-= render "devise/shared/links"
+.container
+  = image_tag "logo.png", class:"logo"
+  .main-content-password
+    %h2.title パスワード再設定メールを送る
+    = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
+      %h3.sub-title メールアドレス
+      .field
+        = f.email_field :email, autofocus: true, autocomplete: "email"
+      .actions
+        = f.submit "送信", class: 'reset-btn'
