--- a/app/assets/stylesheets/_devise.scss
+++ b/app/assets/stylesheets/_devise.scss
@@ -40,6 +40,40 @@
       margin-bottom: 20px;
     }
   }
+  .main-content-password{
+    width: 560px;
+    margin: auto;
+    .title {
+      font-size: 36px;
+      font-weight: 400px;
+      color: #4a4a4a;
+      margin-top: 30px;
+      margin-bottom: 30px;
+    }
+    .sub-title {
+      font-size: 14px;
+      font-weight: 700;
+      color: #4a4a4a;
+      margin-bottom: 5px;
+    }
+    #user_email {
+      height: 22px;
+      width: 534px;
+      border-radius: 3px;
+      border: 1px solid #ccc;
+      margin-bottom: 15px;
+      padding: 6px 12px;
+    }
+    .reset-btn {
+      height: 33px;
+      width: 54px;
+      color: #fff;
+      background-color: #59bb0c;
+      border-color: #4ea30a;
+      border-radius: 3px;
+      font-size: 14px;
+    }
+  }
   .left-content {
     float: left;
     width: 333px;
