--- a/app/views/articles/_search_result.html.haml
+++ b/app/views/articles/_search_result.html.haml
@@ -3,15 +3,27 @@
     .container-body-left
       .input-zone
         %input{ class: "searchbox",  type: 'search'}
-        .input-button
+        %button{ class: "input-button", type: 'submit'}
           検索
-      .select-page
-        %ul.border
-          %li
-            すべて
-            123456
-          %li
-            ストック済み
+      .select-page-container
+        .select-page
+          %ul
+            %li
+              すべて
+              123456
+            %li
+              ストック済み
+        .page-order
+          %details
+            %summary
+              新着順
+            %ul
+              %li
+                新着順
+              %li
+                関連順
+              %li
+                ストック数順
       .articles
         .my_picture
           = image_tag "https://qiita-image-store.s3.amazonaws.com/0/164189/profile-images/1491563384", size: "25x25",  alt:"プロフ画"
@@ -83,8 +95,18 @@
           .article__sentence
             Rubyのコロンを使用した書き方(「::」)について、分かりやすいと思ったコードを備忘録的に残しておきます。
     .container-body-right
-
-
-
-
-
+      .tag-field
+        %hr
+        .tag-field__related-tag
+          関連タグ
+        .tag-field__tag-name
+          Ruby
+        .tag-field__tag-post
+          17099投稿
+        .tag-field__tag-follower
+          24461フォロワー
+        .tag-field__tag-follow
+          フォロー
+        %hr
+      .search-option
+        = image_tag "search_option.png", id: "search_paper", alt:"検索やりかた"
