--- a/app/views/articles/_search_result.html.haml
+++ b/app/views/articles/_search_result.html.haml
@@ -5,8 +5,8 @@
         %input{ class: "searchbox",  type: 'search'}
         %button{ class: "input-button", type: 'submit'}
           検索
-      .select-page-container
-        .select-page
+      .select-order-container
+        .tab-select
           %ul
             %li
               すべて
