--- a/app/assets/stylesheets/_articles.scss
+++ b/app/assets/stylesheets/_articles.scss
@@ -3,7 +3,6 @@
   background-color: #55c500;
   height: 56px;
   display: block;
-  overflow: hidden;
   .short-header{
     color: #fff;
     // padding-right: 16px;
@@ -23,54 +22,164 @@
           align-items: center;
           justify-content: center;
           position: relative;
-            .title{
-              display: flex;
-              align-items: center;
-              .title_name{
-                font-size: 30px;
-                cursor: pointer;
-                // width: 74px;
-                // height: 25px;
-                // fill: #fff;
-                // font-family: -apple-system,Segoe UI,Helvetica Neue,Hiragino Kaku Gothic ProN,"メイリオ",meiryo,sans-serif;
-                // // フォントファミリー
-              }
-              .title_box{
-                .title_box_list{
+            .title img{
+              margin-top: 5px;
+              width: 87px;
+              height: 29px;
        // !!!!!!!!一番下にコメントアウトで一覧のcss完成系あります!!!!!!!!!!!
+            }
+            .home {
+              height: 20px;
+              width: 57px;
+              background-image: url(home_off.png);
+              background-size: 57px 20px;
+              margin-left: 50px;
+              margin-top: 4px;
+              margin-right: 24px;
+              summary {
+                height: 20px;
+                color: transparent;
+                summary span {
+                  color: #000;
+                }
+              }
+              ul{
+              font-size: 12px;
+              display: block;
+              position: absolute;
+              top: 52px;
+              z-index: 20;
+              width: 198px;
+              background-color: white;
+              padding: 4px 0;
+              border: 1px solid #ddd;
+              border-radius: 3px;
+              box-shadow: 0 0 8px 0 rgba(0,0,0,.15);
+                .trend {
+                  height: 41px;
+                  width: 198px;
+                  background-image: url(trend_off.png);
+                  background-size: 198px 41px;
+                }
+                .trend:hover {
+                  background-image: url(trend_on.png);
+                }
+                .timeline {
+                  height: 41px;
+                  width: 198px;
+                  background-image: url(timeline_off.png);
+                  background-size: 198px 41px;
+                }
+                .timeline:hover {
+                  background-image: url(timeline_on.png);
+                }
+                .tag_feed {
+                  height: 41px;
+                  width: 198px;
+                  background-image: url(tag_feed_off.png);
+                  background-size: 198px 41px;
+                }
+                .tag_feed:hover {
+                  background-image: url(tag_feed_on.png);
                 }
               }
             }
-            .home{
-              height: 100%;
-              color: #fff;
-              // padding: 0 20px 0 16px;
-              // padding-right: 20px;
-              // padding-left: 16px;
-              // background-color: blue;
-                .home_content{
-                  display: flex;
-                  align-items: center;
-                  margin:4px 0 0 24px;
-                  padding: 16px 0;
-                  font-size: 12px;
+            .home:hover {
+              background-image: url(home_on.png);
+            }
+
+            .community {
+              height: 20px;
+              width: 95px;
+              background-image: url(community_off.png);
+              background-size: 95px 20px;
+              margin-top: 4px;
+              margin-right: 24px;
+              summary {
+                height: 20px;
+                color: transparent;
+                summary span {
+                  color: #000;
                 }
-              // &__name{
-              //   font-size: 14px;
-              // }
-            }
-            .community{
-              height: 100%;
-              padding: 0 16px;
-              display: flex;
-              align-items: center;
-              margin:4px 0 0 24px;
+              }
+              ul{
               font-size: 12px;
-            //     .community_name{
-            //     }
-            //     .community_button{
-            //     }
+              display: block;
+              position: absolute;
+              top: 52px;
+              z-index: 20;
+              width: 198px;
+              background-color: white;
+              padding: 4px 0;
+              border: 1px solid #ddd;
+              border-radius: 3px;
+              box-shadow: 0 0 8px 0 rgba(0,0,0,.15);
+                .user_list {
+                  height: 41px;
+                  width: 198px;
+                  background-image: url(user_list_off.png);
+                  background-size: 198px 41px;
+                }
+                .user_list:hover {
+                  background-image: url(user_list_on.png);
+                }
+                .organizations {
+                  height: 41px;
+                  width: 198px;
+                  background-image: url(organizations_off.png);
+                  background-size: 198px 41px;
+                }
+                .organizations:hover {
+                  background-image: url(organizations_on.png);
+                }
+                .calendar {
+                  height: 41px;
+                  width: 198px;
+                  background-image: url(calendar_off.png);
+                  background-size: 198px 41px;
+                }
+                .calendar:hover {
+                  background-image: url(calendar_on.png);
+                }
+                .hr {
+                  height: 9px;
+                  width: 198px;
+                  background-image: url(hr.png);
+                  background-size: 198px 9px;
+                }
+                .qiitadon {
+                  height: 41px;
+                  width: 198px;
+                  background-image: url(qiitadon_off.png);
+                  background-size: 198px 41px;
+                }
+                .qiitadon:hover {
+                  background-image: url(qiitadon_on.png);
+                }
+                .community_guide {
+                  height: 41px;
+                  width: 198px;
+                  background-image: url(community_guide_off.png);
+                  background-size: 198px 41px;
+                }
+                .community_guide:hover {
+                  background-image: url(community_guide_on.png);
+                }
+                .manual {
+                  height: 41px;
+                  width: 198px;
+                  background-image: url(manual_off.png);
+                  background-size: 198px 41px;
+                }
+                .manual:hover {
+                  background-image: url(manual_on.png);
+                }
+              }
             }
+            .community:hover {
+              background-image: url(community_on.png);
+            }
+
             .search{
                 .search_input{
                   .messageform{
@@ -92,35 +201,157 @@
           justify-content: center;
           height: 100%;
           // position: relative;
-            .stock{
-              // background: black;
-              margin-right: 16px;
-              padding: 0 16px ;
-                .stock_name{
-                   font-size: 12px;
-                }
-            }
-            .postbutton{
-              background: #3f9200;
-              margin-right: 16px;
+          .stock{
+            height: 20px;
+            width: 105px;
+            background-image: url(stock_off.png);
+            background-size: 105px 20px;
+            margin-top: 4px;
+            margin-right: 16px;
+          }
+          .stock:hover {
+            background-image: url(stock_on.png);
+          }
+          .postbutton{
+            height: 32px;
+            width: 98px;
+            background-image: url(postbutton_off.png);
+            background-size: 98px 32px;
+            margin-right: 20px;
+          }
+          .postbutton:hover {
+            background-image: url(postbutton_on.png);
+          }
+          // .notification
+          .login-user{
+            height: 32px;
+            width: 69px;
+            summary {
               height: 32px;
-              padding: 0 16px ;
-              border-radius: 4px;
-              display: flex;
-              align-items: center;
-                .postbutton_name{
-                  font-size: 12px;
-                  // text-align: center;
-                }
+              color: transparent;
+              summary span {
+                color: #000;
+              }
             }
-            // .notification
-            .login-user{
-              margin-right: 16px;
-              padding: 0 16px ;
-              cursor: pointer;
-                .login-user_mark{
+            .user_arrow {
+              float: right;
+              height: 16px;
+              width: 18px;
+              background-image: url(arrow_off.png);
+              background-size: 18px 16px;
+              margin-top: 9px;
+              margin-left: 2px;
+            }
+            .user_arrow:hover {
+              background-image: url(arrow_on.png);
+            }
+            .profile_picture {
+              float: right;
+              height: 32px;
+              width: 32px;
+              border-radius: 3px;
+            }
+            ul{
+            right: 20px;
+            font-size: 12px;
+            display: block;
+            position: absolute;
+            top: 52px;
+            z-index: 20;
+            width: 198px;
+            background-color: white;
+            padding: 4px 0;
+            border: 1px solid #ddd;
+            border-radius: 3px;
+            box-shadow: 0 0 8px 0 rgba(0,0,0,.15);
+              .mypage {
+                height: 41px;
+                width: 198px;
+                background-image: url(mypage_off.png);
+                background-size: 198px 41px;
+              }
+              .mypage:hover {
+                background-image: url(mypage_on.png);
+              }
+              .draft {
+                height: 41px;
+                width: 198px;
+                background-image: url(draft_off.png);
+                background-size: 198px 41px;
+              }
+              .draft:hover {
+                background-image: url(draft_on.png);
+              }
+              .request {
+                height: 41px;
+                width: 198px;
+                background-image: url(request_off.png);
+                background-size: 198px 41px;
+              }
+              .request:hover {
+                background-image: url(request_on.png);
+              }
+              .hr {
+                height: 9px;
+                width: 198px;
+                background-image: url(hr.png);
+                background-size: 198px 9px;
+              }
+              .setting {
+                height: 41px;
+                width: 198px;
+                background-image: url(setting_off.png);
+                background-size: 198px 41px;
+              }
+              .setting:hover {
+                background-image: url(setting_on.png);
+              }
+              .help {
+                height: 41px;
+                width: 198px;
+                background-image: url(help_off.png);
+                background-size: 198px 41px;
+              }
+              .help:hover {
+                background-image: url(help_on.png);
+              }
+              .logout {
+                position: relative;
+                height: 41px;
+                width: 198px;
+                background-image: url(logout_off.png);
+                background-size: 198px 41px;
+                a {
+                  position: absolute;
+                  width: 198px;
+                  height: 41px;
                 }
-             }
+              }
+              .logout:hover {
+                background-image: url(logout_on.png);
+              }
+            }
+          }
+          .signup_button {
+            height: 32px;
+            width: 96px;
+            background-image: url(signup_off.png);
+            background-size: 96px 32px;
+            margin-right: 20px;
+          }
+          .signup_button:hover {
+            background-image: url(signup_on.png);
+          }
+          .login_button {
+            height: 32px;
+            width: 56px;
+            background-image: url(login_off.png);
+            background-size: 56px 32px;
+            margin-right: 20px;
+          }
+          .login_button:hover {
+            background-image: url(login_on.png);
+          }
         }
     }
   }
