--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,54 +1,64 @@
 / 各単語(Qiita,ホーム、コミュニティetc)の場所にリンクを記述すれば飛べるはず
 / クリックしたら一覧表示する記述が（ ）の場所予定。書くべきhamlは下にほぼ完成形あります。jsなしで行けそうだけど検索してもわからず。
 / 記述haml内にもコメントアウトあります
+
 .header
   .short-header
     .short-header-container
       .short-header-container_left
         .title
-          .title_name
-            QIITA
-          .title_box
-            ( )
-            / .title_box_list
-            /   .list-1
-            /     Qiita
-            /   .list-2
-            /     .team_now
-            /       ログイン中のチームがありません
-            /     .team_login
-            /       Qitia:Teamにログイン
+          = link_to image_tag("header_logo.png"), root_path, class: "title_logo"
         .home
-          .home_content
-            .home_name
-              ホーム
-            .home_button
-              ( )
+          %details
+            %summary
+            %ul
+              .trend
+              .timeline
+              .tag_feed
         .community
-          .community_name
-            コミュニティ
-          .community_button
-            ( )
+          %details
+            %summary
+            %ul
+              .user_list
+              .organizations
+              .calendar
+              .hr
+              .qiitadon
+              .hr
+              .community_guide
+              .manual
         .search
           .search_megane
           .search_input
             %input{ class: "messageform", placeholder: 'キーワードを入力', type: 'search'}
             / placeholderの記述が反映されない
-      .short-header-container_right
-        .stock
-          .stock_mark
-          .stock_name
-            ストック一覧
-        .postbutton
-          .postbutton_pen
-          .postbutton_name
-            投稿する
-        .notification
-          .notification_word
-        .login-user
-          .login-user_mark
-            = image_tag "https://secure.gravatar.com/avatar/dc11c47be9e836689c39a5b6b9c58710", size: "32x32"
-          .login-user_button
+      - if user_signed_in?
+        .short-header-container_right
+          .stock
+          = link_to "", new_article_path, class: "postbutton"
+          / .notification
+          .login-user
+            %details
+              %summary
+                .user_arrow
+                = image_tag "profile.jpg", class: "profile_picture", size: "32x32"
+              %ul
+                .mypage
+                .hr
+                .draft
+                .request
+                .hr
+                .setting
+                .help
+                .hr
+                .logout
+                  = link_to "", destroy_user_session_path, method: :delete
+      - else
+        .short-header-container_right
+          .signin
+          = link_to "", new_user_registration_path, class: "signup_button"
+          .login
+          = link_to "", new_user_session_path, class: "login_button"
 
 / -------------クリックして一覧のhaml(js導入後？)--------------
 / .title_box_list
