--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -44,7 +44,7 @@
           width: 50px;
           height: 50px;
           margin-right: 24px;
-          margin-bottom: 24px;
+          margin-bottom: 30px;
           transition: color .1s;
           background-color: gray;
           position: relative;
@@ -66,7 +66,6 @@
           color: #fff;
           background-color: #aaa;
           font-size: 18px;
-          cursor: pointer;
           margin-bottom: 16px;
           .fa-twitter {
             cursor: pointer;
@@ -86,7 +85,7 @@
           color: #fff;
           background-color: #aaa;
           font-size: 18px;
-          cursor: pointer;
+          margin-bottom: 16px;
           .fa-facebook-f {
             cursor: pointer;
             color: white;
@@ -112,13 +111,20 @@
               justify-content: flex-start;
               width: 100%;
               &__author {
-                background-color: white;
+                display: flex;
+                align-items: center;
+                margin-right: 16px;
               }
               &__time {
-                background-color: yellow;
+                color: #999;
+                font-size: 1em;
+                margin-right: 16px;
               }
               &__meta {
-                float: right;
+                margin-left: auto;
+                #icon {
+                  cursor: pointer;
+                }
               }
             }
             .title {
@@ -129,17 +135,22 @@
               line-height: 1.4;
             }
             #Tags {
+              display: flex;
+              flex-wrap: wrap;
               .Tags_name {
-                .tags_links {
-                }
+                margin-right: 8px;
               }
             }
           }
         }
       }
-      // .option {
-      //   background-color: gray;
-      //   margin-top: 40px;
+      .option {
+        background-color: gray;
+        margin-top: 20px;
+      }
+      // .topic {
+      //   background-color: aqua;
+      //   float: right;
       //   position: sticky;
       //   top: 20vh;
       // }
