--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -9,7 +9,7 @@
           %i.fas.fa-folder
         %span.fa-stack.fa-3x
           %i.fab.fa-twitter
-        %span.fa-stack.fa-4x
+        %span.fa-stack.fa-3x
           %i.fab.fa-facebook-f
       #item.main
         .show_article
@@ -17,28 +17,35 @@
             .show_header_info
               .show_header_info__author
                 %a
-                  作者情報
+                  = image_tag "", size: "", alt: "ユーザーアイコン"
               .show_header_info__time
                 2015年07月31日に更新
               .show_header_info__meta
-                %i.fab.fa-ellipsis-h.fa
+                %i.fab.fa-ellipsis-h.fa#icon
             %h1.title
               タイトル
-            #Tags.header_tags
-              %a.tags_name
-                tagリンク先の記述
-                %span.tags_links
-                  タグネーム
+            #Tags
+              %a.tags_item
           .content
             記事内容
           .show_footer
             .show_footer_menu
+              %span.fa-stack
+                %i.fas
+              %span.fa-stack
+                %i.fas.fa-paper-plane
+              %span.fa-stack
+                %i.fas
+              %span.fa-stack
+                %i.
+
               編集リクエスト・ストック済み・いいねicon
             .show_footer_social
               social-icon
           .show_footer_author_info
             作者情報
       #item.option
+      #item.topic
   #container{style: "display: grid;"}
     show_footer部分
 
