3人分のimport記述

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,3 +2,8 @@
 @import "articles";
 @import "search_result";
 @import "devise";
+@import "show";
+@import "timeline";
+@import "trend";
+@import "tag_feed";
+@import "mypage"
