--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -1,8 +1,10 @@
+// 共通化をすることが課題
 #main {
   .wapper {
     background-color: #f1f1f1;
     width: 100%;
     height: 100%;
+    padding: 16px;
     #container {
       grid-template-columns: 80px calc(100% - 300px - 80px) 300px;
       grid-template-rows: minmax(270px,auto) 1fr;
@@ -19,13 +21,13 @@
         position: sticky;
         margin-top: 40px;
         top: 20vh;
-        .fa-1x {
+        #thumbs {
           border: 2px solid #55c500;
           background-color: #fff;
-          border-radius: 50%;
           display: flex;
           align-items: center;
           justify-content: center;
+          border-radius: 50%;
           width: 50px;
           height: 50px;
           font-size: 24px;
@@ -36,7 +38,7 @@
             color: #55c500;
           }
         }
-        .fa-2x {
+        #folder {
           border-radius: 50%;
           display: flex;
           align-items: center;
@@ -54,7 +56,7 @@
             font-size: 0.8em;
           }
         }
-        .fa-3x {
+        #smallCircle {
           margin-right: 32px;
           margin-left: 8px;
           width: 32px;
@@ -73,33 +75,20 @@
             font-size: 1em
           }
         }
-        .fa-4x {
-          margin-right: 32px;
-          margin-left: 8px;
-          width: 32px;
-          height: 32px;
-          border-radius: 50%;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          color: #fff;
-          background-color: #aaa;
-          font-size: 18px;
-          margin-bottom: 16px;
           .fa-facebook-f {
             cursor: pointer;
             color: white;
             font-size: 1em
           }
-        }
       }
       .main {
         background-color: #fff;
         margin-top: 40px;
-        padding: 16px;
+        padding: 30px;
+        margin: 16px;
         top: 20vh;
         .show_article {
-          background-color: red;
+          // background-color: red;
           .show_header {
             background-color: #fff;
             color: #333;
@@ -114,6 +103,9 @@
                 display: flex;
                 align-items: center;
                 margin-right: 16px;
+                .author_name {
+                  margin-left: 15px;
+                }
               }
               &__time {
                 color: #999;
@@ -137,10 +129,154 @@
             #Tags {
               display: flex;
               flex-wrap: wrap;
-              .Tags_name {
+              .tags_item {
                 margin-right: 8px;
               }
             }
+          }
+          .content {
+            // 記事内容を記述
+          }
+          .show_footer {
+            margin-top: 64px;
+            margin-bottom: 16px;
+            .show_footer_menu {
+              #plane {
+                margin-right: 24px;
+                margin-bottom: 16px;
+                padding: 0 16px;
+                color: #fff;
+                background-color: #ff8d00;
+                border-radius: 4px;
+                align-items: center;
+                flex-shrink: 0;
+                height: 32px;
+                width: 150px;
+                justify-content: center;
+                cursor: pointer;
+                .edit-request {
+                  margin-left: 5px;
+                }
+              }
+              #directory {
+                margin-right: 24px;
+                margin-bottom: 16px;
+                padding: 0 16px;
+                color: #fff;
+                background-color: gray;
+                border-radius: 4px;
+                align-items: center;
+                flex-shrink: 0;
+                height: 32px;
+                width: 80px;
+                justify-content: center;
+                cursor: pointer;
+              }
+              #like {
+                cursor: pointer;
+                flex-grow: 1;
+                min-width: 85px;
+                color: #59bb0c;
+                background-color: #fff;
+                border: 1px solid #ccc;
+                border-radius: .2em;
+                margin-right: 24px;
+                margin-bottom: 16px;
+                align-items: center;
+                text-align: center;
+              }
+            }
+            .show_footer_social {
+              margin-bottom: -10px;
+              float: left;
+              #twitter {
+                margin-right: 8px;
+                float: left;
+                position: relative;
+                height: 18px;
+                width: 80px;
+                box-sizing: border-box;
+                background-color: #1b95e0;
+                color: #fff;
+                border-radius: 3px;
+                font-weight: 500;
+                cursor: pointer;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+              }
+              #bold {
+                margin-right: 8px;
+                float: left;
+                position: relative;
+                height: 18px;
+                width: 45px;
+                box-sizing: border-box;
+                background-color: #00a4de;
+                color: #fff;
+                border-radius: 3px;
+                font-weight: 500;
+                cursor: pointer;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+              }
+              #google {
+                margin-right: 8px;
+                float: left;
+                position: relative;
+                height: 18px;
+                width: 30px;
+                box-sizing: border-box;
+                background-color: #fff;
+                color: red;
+                border-radius: 3px;
+                font-weight: 500;
+                cursor: pointer;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border: 1px solid #ccc;
+              }
+              #slack {
+                margin-right: 8px;
+                float: left;
+                position: relative;
+                height: 18px;
+                width: 80px;
+                box-sizing: border-box;
+                background-color: #59bb0c;
+                color: #fff;
+                border-radius: 3px;
+                font-weight: 500;
+                cursor: pointer;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+              }
+              #like_icon {
+                margin-right: 8px;
+                float: left;
+                position: relative;
+                height: 18px;
+                width: 80px;
+                box-sizing: border-box;
+                background-color: #1b95e0;
+                color: #fff;
+                border-radius: 3px;
+                font-weight: 500;
+                cursor: pointer;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+              }
+            }
+          }
+          .show_footer_author_info {
+            display: flex;
+            width: 100%;
+            padding-top: 40px;
+            border-top: 1px solid #ddd;
           }
         }
       }
