--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -3,46 +3,70 @@
   .wapper
     #container{style: "display: grid;"}
       #item.stick_Menu
-        %span.fa-stack.fa-1x
+        %span#thumbs
           %i.fas.fa-thumbs-up
-        %span.fa-stack.fa-2x
+        %span.fa-stack.fa-2x#folder
           %i.fas.fa-folder
-        %span.fa-stack.fa-3x
+        %span.fa-stack#smallCircle
           %i.fab.fa-twitter
-        %span.fa-stack.fa-3x
+        %span.fa-stack#smallCircle
           %i.fab.fa-facebook-f
       #item.main
         .show_article
           .show_header
             .show_header_info
               .show_header_info__author
-                %a
-                  = image_tag "", size: "", alt: "ユーザーアイコン"
+                %a.profile
+                  = image_tag "profile.jpg", class: "profile_picture", size: "32x32"
+                %h1.author_name
+                  ねこねこ
               .show_header_info__time
-                2015年07月31日に更新
+                form_posted_time(articles.created_at)
               .show_header_info__meta
                 %i.fab.fa-ellipsis-h.fa#icon
             %h1.title
+              / = @articles.title
               タイトル
             #Tags
               %a.tags_item
+              tags
           .content
-            記事内容
+            / = @articles.body
+            記事
           .show_footer
             .show_footer_menu
-              %span.fa-stack
-                %i.fas
-              %span.fa-stack
+              %span.fa-stack#plane
                 %i.fas.fa-paper-plane
-              %span.fa-stack
-                %i.fas
-              %span.fa-stack
-                %i.
-              編集リクエスト・ストック済み・いいねicon
+                %a.edit-request
+                  編集リクエスト
+              %span.fa-stack#directory
+                %i.fas.fa-folder-open
+                %a.stock
+                  ストック
+              %span.fa-stack#like
+                %i.fas.fa-thumbs-up
+                %a.like
+                  いいね
             .show_footer_social
-              social-icon
+              %span.fa-stack#twitter
+                %i.fab.fa-twitter
+                %a.tweet
+                  tweet
+              %span.fa-stack#bold
+                %i.fas.fa-bold
+                %a.hatena
+                  11
+              %span.fa-stack#google
+                %i.fab.fa-google-plus-g
+              %span.fa-stack#slack
+                %i.fab.fa-slack-hash
+                %a.slack
+                  slack
+              %span.fa-stack#like_icon
+                %i.fas.fa-thumbs-up
+                %a.like_icon
+                  Like
           .show_footer_author_info
-            作者情報
       #item.option
       #item.topic
   #container{style: "display: grid;"}
