--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -10,9 +10,9 @@
       grid-template-rows: minmax(270px,auto) 1fr;
       padding-top: 24px;
       padding-bottom: 40px;
-      height: 1000px;
       width: calc(100% - 50px);
       display: flex;
+      height: 1000px;
       max-width: 1280px;
       margin: auto;
       margin-right: auto;
@@ -33,6 +33,14 @@
           font-size: 24px;
           position: relative;
           margin-bottom: 16px;
+          .likeCount {
+            position: absolute;
+            top: -30px;
+            font-size: 1.6rem;
+            font-weight: 700;
+            cursor: pointer;
+            color: #55c500;
+          }
           .fa-thumbs-up {
             cursor: pointer;
             color: #55c500;
@@ -135,6 +143,9 @@
             }
           }
           .content {
+            height: 100%;
+            width: 100%;
+
             // 記事内容を記述
           }
           .show_footer {
@@ -187,7 +198,7 @@
               }
             }
             .show_footer_social {
-              margin-bottom: -10px;
+              margin-bottom: 10px;
               float: left;
               #twitter {
                 margin-right: 8px;
@@ -277,21 +288,54 @@
             width: 100%;
             padding-top: 40px;
             border-top: 1px solid #ddd;
+            .author_info_body {
+              margin-left: 15px;
+              .author_name {
+                display: flex;
+                flex-wrap: wrap;
+                align-items: center;
+                margin-bottom: 8px;
+              }
+              .author_info_description {
+                font-size: 1.4rem;
+                color: #777;
+                margin-bottom: 16px;
+              }
+              .author_info_footer {
+                #follow {
+                  float: left;
+                  border: 1px solid gray;
+                  padding: 0 16px;
+                  background-color: #fff;
+                  border-radius: 4px;
+                  flex-shrink: 0;
+                  height: 20px;
+                  width: 65px;
+                  cursor: pointer;
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+                  .fa-user-plus {
+                    font-size: 0.8em;
+                  }
+                  .follow {
+                      font-size: 0.8em;
+                  }
+                }
+              }
+            }
           }
         }
       }
-      .option {
-        background-color: gray;
-        margin-top: 20px;
+      .topic {
+        margin-top: 16px;
+        float: right;
+        position: sticky;
+        top: 0vh;
+        width: 300px;
+        grid-column: 3 / 4;
+        max-height: 80vh;
       }
-      // .topic {
-      //   background-color: aqua;
-      //   float: right;
-      //   position: sticky;
-      //   top: 20vh;
-      // }
-    }
-    #container {
     }
   }
 }
