--- a/app/assets/stylesheets/_articles.scss
+++ b/app/assets/stylesheets/_articles.scss
@@ -181,16 +181,14 @@
             }
 
             .search{
-                .search_input{
-                  .messageform{
-                    height: 32px;
-                    width: 200px;
-                    font-size: 12px;
-                    border: none;
-                    border-radius: 4px;
-                    box-shadow: inset 0 1px 2px #ccc;
-                  }
-                }
+              .messageform{
+                height: 32px;
+                width: 200px;
+                font-size: 12px;
+                border: none;
+                border-radius: 4px;
+                box-shadow: inset 0 1px 2px #ccc;
+              }
             }
         }
         .short-header-container_right{
@@ -482,27 +480,49 @@
 
 .stocks {
   width: calc(100% - 120px);
-  height: 1000px;
   margin: 20px 60px;
   .content-left {
     float: left;
     width: 270px;
     margin: 0 10px;
     .title {
+      height: 75px;
       .title_img {
         width: 270px;
         height: 75px;
       }
     }
     .search {
-      .search_img {
-        width: 270px;
-        height: 34px;
-        margin: 1px 0;
-      }
-      .search_form_img {
-        width: 270px;
-        height: 48px;
+      width: 270px;
+      height: 57px;
+      padding-top: 13px;
+      padding-bottom: 12px;
+      border-bottom: 1px solid #eee;;
+      .article_search {
+        height: 57px;
+        h3 {
+          font-size: 14px;
+          line-height: 15px;
+          color: #4a4a4a;
+          font-weight: bold;
+          margin-bottom: 8px;
+        }
+        .search-field {
+          float: left;
+          height: 20px;
+          width: 193px;
+          margin-right: 12px;
+          padding: 6px 12px;
+          font-size: 12px;
+          border: 1px solid #ddd;
+          border-radius: 2px;
+          box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+        }
+        .actions {
+          float: right;
+          width: 39px;
+          height: 34px;
+        }
       }
     }
   }
