--- a/app/views/layouts/main.html.haml
+++ b/app/views/layouts/main.html.haml
@@ -8,5 +8,5 @@
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
-    = render partial: 'shared/header'
+    = render partial: 'shared/header', locals: { search: @search }
     = yield
