--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -33,17 +33,21 @@
           font-size: 24px;
           position: relative;
           margin-bottom: 16px;
-          .likeCount {
-            position: absolute;
-            top: -30px;
-            font-size: 1.6rem;
-            font-weight: 700;
-            cursor: pointer;
-            color: #55c500;
-          }
           .fa-thumbs-up {
             cursor: pointer;
             color: #55c500;
+          }
+          .likeCount {
+            position: absolute;
+            top: -30px;
+            #like-button {
+              font-size: 1.3rem;
+              font-weight: 700;
+              cursor: pointer;
+              color: #55c500;
+              border: transparent 1px solid;
+              background-color: #f1f1f1;
+            }
           }
         }
         #folder {
