--- a/app/views/likes/create.js.erb
+++ b/app/views/likes/create.js.erb
@@ -1,1 +1,3 @@
 $("#like-button").html("<%= j(render partial: 'like', locals: { articles: @articles, likes: @likes, like: @like}) %>")
+$("#like-zone").html("<%= j(render partial: 'like', locals: { prototypes: @prototypes, likes: @likes, like: @like}) %>")
+$("#like-of-<%= @tweet.id %>").html("<%= j(render partial: 'like', locals: { tweet: @tweet }) %>")
