--- a/app/views/likes/destroy.js.erb
+++ b/app/views/likes/destroy.js.erb
@@ -1,1 +1,5 @@
-$("#like-button").html("<%= j(render partial: 'like', locals: { articles: @articles, likes: @likes }) %>");
+$("#like-button").html("<%= j(render partial: 'like', locals: { article: @article, likes: @likes }) %>");
+
+$("#like-zone").html("<%= j(render partial: 'like', locals: { prototype: @prototype, likes: @likes }) %>");
+
+$("#like-of-<%= @article.id %>").html("<%= j(render partial: 'like', locals: { article: @article }) %>");
